# knirvbase

./: .gitignore
.sync-state/: sync-state.json
go/: Makefile  README.md  benchmarks_test.go  go.mod  go.sum  memory_categories_example
go/benchmarks/: benchmarks_test.go
go/cmd/: main.go
go/docs/: Database_Specification.md  Distributed_Database_Implementation_go.md  Full_Implementation.md  KNIRVBASE_INTEGRATION_PLAN.md  KNIRVQL_SPECIFICATION.md
go/examples/: memory_categories_example.go
go/internal/auth/: auth.go  auth_test.go
go/internal/benchmarks/: benchmark_integration_test.go  benchmarks_test.go
go/internal/clock/: vector_clock.go  vector_clock_test.go
go/internal/collection/: distributed_collection.go  distributed_collection_test.go
go/internal/database/: distributed_database.go  distributed_database_test.go
go/internal/embedding/: embedder.go  embedding_test.go  lsa.go  tfidf.go
go/internal/indexing/: debug_hnsw.go  debug_test.go  hnsw.go  hnsw_test.go  indexing.go
go/internal/logging/: logging.go  logging_test.go
go/internal/monitoring/: monitoring.go  monitoring_test.go
go/internal/network/: network_manager.go  network_manager_test.go
rust/: Cargo.toml  Distributed_Database_Implementation_rust.md
rust/src/: clock.rs  collection.rs  crypto.rs  database.rs  lib.rs  main.rs  network.rs  query.rs  resolver.rs  storage.rs  types.rs
rust/src/crypto/: pqc.rs
ts/: Distributed_Database_Implementation_ts.md  package-lock.json  package.json  tsconfig.json
ts/coverage/: index.html  lcov.info
ts/docs/: PRODUCTION_READINESS_ASSESSMENT.md
(+87 files in other folders)
