[package]
name = "knirvbase"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
async-trait = "0.1"
futures = "0.3"
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
parking_lot = "0.12"
dashmap = "5.5"
bincode = "1.3"
base64 = "0.21"
hex = "0.4"
sha2 = "0.10"
aes-gcm = "0.10"
# pqcrypto = { version = "0.15", features = ["kyber768", "dilithium3"] } # Temporarily disabled
libp2p = { version = "0.53", features = ["tcp", "dns", "websocket", "noise", "yamux", "gossipsub", "kad", "identify", "ping", "mdns", "relay", "dcutr", "rendezvous"] }
prost = "0.12"
tonic = "0.11"
tempfile = "3.0"
getrandom = { version = "0.2", features = ["js"] }

[dev-dependencies]
tokio-test = "0.4"